--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"@types/node": "^20.4.8"
 	},
 	"type": "module",
-	"engines" : { 
-		"node" : ">=18.0.0 <19.0.0"
+	"engines": {
+		"node": ">=18.0.0 <19.0.0"
 	}
 }
