--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"prisma": "^5.1.1",
+		"sass": "^1.64.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
@@ -24,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.1.1"
+		"@prisma/client": "^5.1.1",
+		"openssl": "^2.0.0"
 	}
 }
