--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/lodash": "^4.14.197",
+		"@types/node": "^20.4.8",
 		"prisma": "^5.1.1",
 		"sass": "^1.64.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"@types/node": "^20.4.8"
+		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.1.1",
+		"lodash": "^4.17.21",
 		"openssl": "^2.0.0"
-    },
+	},
 	"engines": {
 		"node": ">=18.0.0 <19.0.0"
 	}
