--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 	"dependencies": {
 		"@prisma/client": "^5.1.1",
 		"lodash": "^4.17.21",
-		"openssl": "^2.0.0"
+		"openssl": "^2.0.0",
+		"spin-wheel": "^5.0.2"
 	},
 	"engines": {
 		"node": ">=18.0.0 <19.0.0"
